# chatbot-agent-sandbox

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chatbot_agent_sandbox/: proxy_server.py
chatbot_agent_sandbox/agents/: simple_agent.py
chatbot_agent_sandbox/ui/: 0_🏠_Home.py
chatbot_agent_sandbox/ui/pages/: 4_🤖_Chatbot_Basic_System.py  5_🏺_Chatbot_Local_Server.py
scripts/: run_proxy_server.sh
src/: 0_🏠_Home.py  chatbot_basic.py
